syntax = "proto3";

package user;

service UserService {
  rpc GetBuyerByAuthId (GetBuyerByAuthIdRequest) returns (GetBuyerByAuthIdResponse);
}

message GetBuyerByAuthIdRequest {
  string authId = 1;
}

message GetBuyerByAuthIdResponse {
  string buyerPublicId = 1;
  string authId = 2;
  string storePublicId = 3;
  string username = 4;
  string email = 5;
  optional ShippingAddress shippingAddress = 6;
  optional Payment payment = 7;

}

message Payment {
  string method = 1;
  string transactionId = 2;
}

message ShippingAddress {
  string address = 1;
  string city = 2;
  string country = 3;
  string postalCode = 4;
}
